Fixed legend headers wrapping Was making fields not line up

--- a/Web_Dashboard/src/styles.scss
+++ b/Web_Dashboard/src/styles.scss
@@ -184,6 +184,7 @@ LEAFLET CUSTOMIZATION
   flex: 0 0 auto;
   margin-bottom: 0px;
   font-weight: bold;
+  white-space: nowrap;
 }
 
 .scale {
